--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "git_actions",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1" , 
+    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
@@ -12,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.22.0",
     "eslint": "^9.22.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^10.1.1",
