Add Test.js for ESLint & Prettier test

--- a/.github/workflows/Lint Check.yml
+++ b/.github/workflows/Lint Check.yml
@@ -26,3 +26,7 @@ jobs:
 
       - name: Run ESLint
         run: npm run lint
+
+      - name: Check Formatting with Prettier
+        run: npm run format:check
+
