--- a/.github/workflows/Lint Check.yml
+++ b/.github/workflows/Lint Check.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Run ESLint
         run: npm run lint
 
-      - name: Check Formatting with Prettier
-        run: npm run format:check
+      - name: Check Formatting with Prettier (Only Test.js)
+        run: npx prettier --check Test.js
+
 
