--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
-    "format:test": "prettier --write Test.js"
+    "format:test": "prettier --write Demo.js"
   },
   "keywords": [],
   "author": "",
